[gd_scene load_steps=4 format=3 uid="uid://bp04yhcnw5h0b"]

[ext_resource type="Script" path="res://Scripts/UI/enemy_screen.gd" id="1_f57rc"]
[ext_resource type="PackedScene" uid="uid://351xjncb05ia" path="res://Scenes/Entity/entity.tscn" id="1_g2d2w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6kutb"]
bg_color = Color(0.0846899, 0.0846899, 0.0846899, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
corner_radius_top_left = 12
corner_radius_bottom_left = 12
shadow_size = 10
shadow_offset = Vector2(-10, 10)

[node name="EnemyScreen" type="CanvasLayer"]
script = ExtResource("1_f57rc")

[node name="EnemyEntity" parent="." instance=ExtResource("1_g2d2w")]
process_mode = 3
position = Vector2(1536, 498)

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -499.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 150.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_6kutb")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Glumanda"

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HPProgressBar_Background" type="ProgressBar" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_type_variation = &"HP_Background_Progress_Bar"
max_value = 1.0
value = 0.6
show_percentage = false

[node name="HPProgressBar" type="ProgressBar" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_type_variation = &"HP_Progress_Bar"
max_value = 1.0
value = 0.5
show_percentage = false

[node name="OverHP" type="ProgressBar" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_type_variation = &"HP_Progress_Bar"
max_value = 1.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
